index icons: same -64/64 brightness/contrast fix and quantisized them

--- a/src/res/sage.css
+++ b/src/res/sage.css
@@ -165,7 +165,7 @@ a.index-menu {
 display: block;
 width: 100px;
 height: 100px;
-background: transparent url("../pix/index_icons.png") no-repeat;
+background: transparent url("../pix/index_icons-nq8.png") no-repeat;
 }
 #index-download a        { background-position: 0px    0px; }
 #index-download:hover    { background-position: -100px 0px; }
